--- a/Project.Api/appsettings.json
+++ b/Project.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ContextDb": "Host=localhost;Port=3030;Database=api_db;Username=user;Password=password;"
+    "ContextDb": "Host=localhost;Port=3030;Database=project_database;Username=user;Password=password;"
   },
   "AllowedHosts": "*"
 }
