--- a/Project.Api/Properties/launchSettings.json
+++ b/Project.Api/Properties/launchSettings.json
@@ -14,7 +14,7 @@
             "dotnetRunMessages": true,
             "launchBrowser": true,
             "launchUrl": "swagger",
-            "applicationUrl": "https://localhost:7100;http://localhost:5100",
+            "applicationUrl": "http://localhost:5100;https://localhost:7100",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             }
