--- a/Project.Api/Properties/launchSettings.json
+++ b/Project.Api/Properties/launchSettings.json
@@ -1,20 +1,30 @@
 {
-    "$schema": "https://json.schemastore.org/launchsettings.json",
+    "$schema": "http://json.schemastore.org/launchsettings.json",
     "iisSettings": {
         "windowsAuthentication": false,
         "anonymousAuthentication": true,
         "iisExpress": {
-            "applicationUrl": "http://localhost:22643",
-            "sslPort": 44333
+            "applicationUrl": "http://localhost:17378",
+            "sslPort": 44352
         }
     },
     "profiles": {
-        "Project.Api": {
+        "http": {
             "commandName": "Project",
             "dotnetRunMessages": true,
             "launchBrowser": true,
             "launchUrl": "swagger",
-            "applicationUrl": "http://localhost:5100;https://localhost:7100",
+            "applicationUrl": "http://localhost:5134",
+            "environmentVariables": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            }
+        },
+        "https": {
+            "commandName": "Project",
+            "dotnetRunMessages": true,
+            "launchBrowser": true,
+            "launchUrl": "swagger",
+            "applicationUrl": "https://localhost:7028;http://localhost:5134",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             }
