--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "api",
-  "scripts": {
-    "migrate": "rm -Rf ./Project.DataAccess/Migrations && dotnet ef --project ./Project.DataAccess migrations add InitialMigration -c PostgresContext --startup-project ./Project.Api",
-    "start": "dotnet run --project ./Project.Api",
-    "start:dev": "dotnet watch run --project ./Project.Api",
-    "build": "dotnet build ./Project.Api"
-  }
+    "name": "api",
+    "scripts": {
+        "migrate": "rm -Rf ./Project.DataAccess/Migrations && dotnet ef --project ./Project.DataAccess migrations add InitialMigration -c PostgresContext --startup-project ./Project.Api",
+        "start": "dotnet run --project ./Project.Api",
+        "start:dev": "dotnet watch run --project ./Project.Api",
+        "build": "dotnet build ./Project.Api && dotnet build ./Project.Test",
+        "test": "dotnet test ./Project.Test"
+    }
 }
