--- a/Project.Core/Project.Core.csproj
+++ b/Project.Core/Project.Core.csproj
@@ -8,4 +8,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.9.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../Project.Business/Project.Business.csproj" />
+  </ItemGroup>
+
 </Project>
