--- a/Project.Api/appsettings.Development.json
+++ b/Project.Api/appsettings.Development.json
@@ -5,7 +5,11 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "Cache": {
+        "DefaultDurationMinutes": 10
+    },
     "ConnectionStrings": {
-        "ContextDb": "Host=localhost;Port=3030;Database=project_database;Username=user;Password=password;"
+        "ContextDb": "Host=localhost;Port=3030;Database=project_database;Username=user;Password=password;",
+        "Redis": "localhost:6379"
     }
 }
