--- a/Project.Core/Project.Core.csproj
+++ b/Project.Core/Project.Core.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="../Project.DataAccess/Project.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="src\Caching\" />
+  </ItemGroup>
+
 </Project>
