--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,15 @@ services:
     depends_on:
       - postgres
 
+  redis:
+      image: redislabs/redismod
+      container_name: redis
+      volumes:
+          - redis-data:/data
+      ports:
+          - '6379:6379'
+
 volumes:
   pgadmin-data:
   postgres-data:
+  redis-data:
