feat: add api docker compose for testing

--- a/Project.Api/appsettings.Development.json
+++ b/Project.Api/appsettings.Development.json
@@ -6,6 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "ContextDb": "Host=localhost;Port=3030;Database=project_database;Username=user;Password=password;"
+        "Database": "Host=postgres;Port=5432;Database=postgres-db;Username=user;Password=password;",
+        "Redis": "redis:6379"
     }
 }
