--- a/Project.Api/Project.Api.csproj
+++ b/Project.Api/Project.Api.csproj
@@ -7,6 +7,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
@@ -28,6 +29,12 @@
     <ProjectReference Include="../Project.Business/Project.Business.csproj" />
     <ProjectReference Include="../Project.Core/Project.Core.csproj" />
     <ProjectReference Include="../Project.DataAccess/Project.DataAccess.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="..\.dockerignore">
+      <Link>.dockerignore</Link>
+    </Content>
   </ItemGroup>
 
 </Project>
