--- a/Project.Api/appsettings.json
+++ b/Project.Api/appsettings.json
@@ -6,7 +6,8 @@
         }
     },
     "ConnectionStrings": {
-        "ContextDb": "Host=localhost;Port=3030;Database=project_database;Username=user;Password=password;"
+        "Database": "Host=postgres;Port=5432;Database=postgres-db;Username=user;Password=password;",
+        "Redis": "redis:6379"
     },
     "AllowedHosts": "*"
 }
