feat: conf nginx v2

--- a/Project.Api/appsettings.Development.json
+++ b/Project.Api/appsettings.Development.json
@@ -11,5 +11,6 @@
     "ConnectionStrings": {
         "Database": "Host=postgres;Port=5432;Database=postgres-db;Username=user;Password=password;",
         "Redis": "redis:6379"
-    }
+    },
+    "ApplyMigrations": true
 }
