--- a/nginx.conf
+++ b/nginx.conf
@@ -1,43 +1,17 @@
 upstream api_service {
-        server api_instance_1:8080;
-        server api_instance_2:8080;
-    }
+    least_conn;
+    server api_instance_1:8080;
+    server api_instance_2:8080;
+    keepalive 32;
+}
 
 server {
     listen 8123;
     server_name localhost;
 
-    location /api/careers/ {
-        proxy_pass http://api_service/api/careers/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_connect_timeout 10s;
-        proxy_send_timeout 10s;
-        proxy_read_timeout 10s;
-    }
-
-    location /api/students/ {
-        proxy_pass http://api_service/api/students/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_connect_timeout 10s;
-        proxy_send_timeout 10s;
-        proxy_read_timeout 10s;
-    }
-
-    location /swagger/ {
-        proxy_pass http://api_service/swagger/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    gzip on;
+    gzip_types text/plain application/xml application/json text/css application/javascript;
+    gzip_min_length 256;
 
     location / {
         proxy_pass http://api_service/;
@@ -49,6 +23,12 @@ server {
         proxy_connect_timeout 10s;
         proxy_send_timeout 10s;
         proxy_read_timeout 10s;
+
+        proxy_buffer_size 128k;
+        proxy_buffers 4 256k;
+        proxy_busy_buffers_size 256k;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
     }
 
     error_page 404 /error.html;
